<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activities.Add">

    <Spinner
        android:id="@+id/spinnerCounty"
        android:layout_width="192sp"
        android:layout_height="35sp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="596dp"
        android:entries="@array/countyAdd"
        android:popupBackground="@color/colorGreyLightest"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addCountyLbl"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIssue"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerIssue"
        android:layout_width="192sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/issueAdd"
        android:popupBackground="@color/colorGreyLightest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addCountyLbl"
        android:layout_width="110sp"
        android:layout_height="35sp"
        android:layout_marginStart="60dp"
        android:text="@string/countyLbl"
        android:textAlignment="textStart"
        android:textColor="@color/colorFontBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addTownCityLbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIssueLbl"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addIssueLbl"
        android:layout_width="110sp"
        android:layout_height="35sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:text="@string/issuelbl"
        android:textAlignment="textStart"
        android:textColor="@color/colorFontBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelOfDangerLbl"
        android:layout_width="330dp"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/issueRatingLbl"
        android:textAlignment="center"
        android:textColor="@color/colorFontBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBar"
        app:layout_constraintVertical_bias="0.089" />


    <TextView
        android:id="@+id/addInfoLbl"
        android:layout_width="145dp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="10dp"
        android:text="@string/infoLbl"
        android:textAlignment="center"
        android:textColor="@color/colorFontBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRoadLbl"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addTownCityLbl"
        android:layout_width="110sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:paddingTop="10dp"
        android:text="@string/closestTownCityLbl"
        android:textAlignment="textStart"
        android:textColor="@color/colorFontBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/addTown"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCountyLbl" />

    <EditText
        android:id="@+id/addRoadName"
        android:layout_width="192sp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="120dp"
        android:ems="10"
        android:hint="Enter Road Name"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTown"
        app:layout_constraintVertical_bias="0.0" />


    <RatingBar
        android:id="@+id/addRatingBar"
        style="@style/ImageRatingBar"
        android:layout_width="257dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGrey"
        android:numStars="10"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInfo" />

    <Button
        android:id="@+id/addIssueBtn"
        android:layout_width="379dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorGreyLighter"
        android:onClick="addIssue"
        android:text="Save Issue"
        android:textColor="@color/colorFontWhite"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <EditText
        android:id="@+id/addTown"
        android:layout_width="192sp"
        android:layout_height="35sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="488dp"
        android:ems="10"
        android:hint="Closest Town/City"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCounty"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addInfo"
        android:layout_width="302dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/addRoadLbl"
        android:layout_width="110sp"
        android:layout_height="35sp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="500dp"
        android:text="@string/locationLbl"
        android:textAlignment="textStart"
        android:textColor="@color/colorFontBlack"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTownCityLbl"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ratingBarValue"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="0"
        android:textAlignment="textStart"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/addRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/addInfo"
        app:layout_constraintVertical_bias="0.207" />

</android.support.constraint.ConstraintLayout>